# src/WebSdk/openapi/engine.json
@@ -955,6 +955,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -994,6 +995,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1008,6 +1012,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1047,6 +1052,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1061,6 +1069,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1100,6 +1109,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1114,6 +1126,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1153,6 +1166,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1167,6 +1183,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1206,6 +1223,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1220,6 +1240,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1259,6 +1280,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1273,6 +1297,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1312,6 +1337,9 @@
               }
             ]
           },
+          "useSystemVolume": {
+            "type": "boolean"
+          },
           "volume": {
             "maximum": 1,
             "minimum": 0,
@@ -1326,6 +1354,7 @@
           "id",
           "isBypassed",
           "isMuted",
+          "useSystemVolume",
           "volume"
         ],
         "properties": {
@@ -1364,6 +1393,9 @@
                 "$ref": "#/components/schemas/ModulePosition"
               }
             ]
+          },
+          "useSystemVolume": {
+            "type": "boolean"
           },
           "volume": {
             "maximum": 1,
